Accept images only

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="drop-area" id="drop-area" >
             <h3>Drag and drop an image</h3>
             <p>or</p>
-            <input type="file" id="file" class="drop-area__input" onchange="previewFile(this.files[0])" />
+            <input type="file" id="file" class="drop-area__input" accept="image/*" onchange="previewFile(this.files[0])" />
             <label for="file" class="button">Upload File</label>
         </div>
     </form>
